opam-version: "1.2"
maintainer: "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors: ["Thomas Gazagnaire <thomas@gazagnaire.org"]
homepage: "https://github.com/realworldocaml/ocaml-cram"
license: "ISC"
dev-repo: "https://github.com/realworldocaml/ocaml-cram.git"
bug-reports: "https://github.com/realworldocaml/ocaml-cram/issues"

build: [
 ["jbuilder" "subst"] {pinned}
 ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: ["jbuilder" "runtest" "-p" name]

depends: [
  "jbuilder" {build}
  "fmt" "astring"
]

available: [
  ocaml-version >= "4.06.0"
]
